Change submodule url

--- a/.config
+++ b/.config
@@ -1,3 +1,3 @@
 [submodule "wp-content/themes/cfe"]
     path = wp-content/themes/cfe
-    url = https://github.com/CFERepo/main.git
+    url = https://github.com/CFERepo/cfe.git
